# milky-cubff

./: .coverage  .gitignore  .markdownlint.json  BUILD_FIX_SUMMARY.md  CMakeLists.txt  INTEGRATION_PLAN.md  Makefile  Makefile.windows  QUICKSIM-CMDS.md  README.md  WARP.md  build_windows.ps1  common_windows.h  main.py  pyproject.toml  windows_portability.h
.hypothesis/constants/: 00a182461bf5bba2  0e85fb07a9766fa3  0fab27b14fc5c737  32e066e335271c60  494f715883fd4238  64a1eec9bb91f851  758114f61dfea5ee  9b4b319bd17ea41e
.hypothesis/examples/04e6b3400353b141/: d84ef9d3420648a6  da4d65ad1bb35e02
.hypothesis/examples/d84ef9d3420648a6/: b7434ad4b1b8b9a6
.hypothesis/examples/da4d65ad1bb35e02/: 04013cf6e31b569e  04e753960848677a  2fdd55bbf05ca230  3537b60f2ec65f18  358669357305575e  432416628d5c1530  46b668c871015155  4bb8922c62f327b5  4c8630e81f34d39c  565f649c26c3a2ea  5f6a2ef538e22838  65fd6ec4080bac3d  69514c98d5704ff3  72a511e005eb9d74  7e318468d8f12d13  8709d07c439bf8c3  9d80e770c76cd474  a3cf0fbcab8a12d2  b1033cb2436f7fef  c6c672de7a41ab22  cc3620d126095493  d3516fc1943f411c  d5b61b6c946ee7a0  e0b8b4c3be672aa9  e2100a84fa7c6704  ed23352e8021e8f5
.kiro/specs/bff-vm-foundation/: design.md  requirements.md  tasks.md
.kiro/specs/minc-integration/: README.md  design.md  requirements.md  tasks.md  traceDb.md
.scratch/: req.md
.scratch/.archive/: REQ  TODO.md  nameTypes
bffx/: __init__.py
docs/: BUILD_OPTIONS.md  MOC.md  OVERVIEW.md  PYTHON_USAGE.md  QUICKSTART_WINDOWS.md  README.md  WINDOWS_BUILD.md
docs/0.1.0/: MOC.md  README.md  m.inc-0.1.0.md
docs/0.1.0/architecture/: README.md  m.inc-1.alpha-plan-LEGACY.md  m.inc-1.alpha_plan.md  m.inc-2.variations.md  m.inc-4.technical_details.md  m.inc-5.integration-plan_LEGACY.md  m.inc-6.module-additions_LEGACY.md  m.inc-data_set.md  m.inc-outputs-and-data_LEGACY.md
docs/0.1.0/changelogs/: 0.0.1.md  0.1.0-m.inc.md  README.md
docs/0.1.0/m.inc-database/: m_inc_agents.csv  m_inc_agents.md  m_inc_interaction_logic.md  m_inc_loop.md
docs/0.1.1/: ARCHITECTURE_DESIGN_PLAN.md  MOC.md  build-options.md
docs/0.1.1/api/: README.md  adapter-spec.md  json-schemas.md
docs/0.1.1/architecture/: README.md  incentives.md  integration-plan.md  interaction-logic.md  (+1 more)
docs/0.1.2/: MOC.md  README.md
docs/architecture/: m.inc-1.alpha_plan.md  m.inc-2.variations.md  m.inc-3.research.md  m.inc-4.technical_details.md  m.inc-5.integration_plan.md  m.inc-6.module_additions.md
docs/tools/: README.md
python/: add_header.py  analyse_soup.py  bff-visualizer.html  bff_interpreter.py  cond_prob.py  convert_bff_trace.py  find_selfrep_parents.py  run_minc_on_bff.py  run_single_bff_program.py  runit.py  selfrep_spawning.py  time_to_sr.py  unified_runner.py
python/bffx/: README.md  __init__.py  __main__.py  analytics.py  assay.py  cli.py  detectors.py  scheduler.py  snapshot.py  soup.py  test_emergence.py  test_reproducibility.py  vm.py
python/m_inc/: .coverage  API.md  INTEGRATION.md  OUTPUT_WRITER_VERIFICATION.md  QUICKSTART.md  README.md  REORGANIZATION.md  TASK_10_VERIFICATION.md  TASK_11_1_VERIFICATION.md  TASK_11_2_VERIFICATION.md  TASK_12_VERIFICATION.md  TASK_14_VERIFICATION.md  TASK_15_5_VERIFICATION.md  TASK_16_4_VERIFICATION.md  TASK_2_VERIFICATION.md  TASK_3_VERIFICATION.md  TASK_5_1_VERIFICATION.md  TASK_5_3_VERIFICATION.md  TASK_5_4_VERIFICATION.md  TASK_5_5_VERIFICATION.md  TASK_6_VERIFICATION.md  TASK_7_VERIFICATION.md  __init__.py  analyze_results.py  check_drip.py  cli.py  example_policy_usage.py  pyproject.toml  run_all_validations.py  sim_output.txt  test_agent_registry.py  test_bff_bridge.py  test_cache.py  test_cli_comprehensive.sh  test_core_models.py  test_economics.py  test_event_aggregator.py  test_integration.py  test_interactions.py  test_minc.py  (+13 more)
python/m_inc/adapters/: __init__.py  bff_bridge.py  bffx_bridge.py  output_writer.py  trace_normalizer.py  trace_reader.py
python/m_inc/config/: README.md  minc_default.yaml  minc_default_policy.yaml  minc_fast.yaml  policy_example.yaml
python/m_inc/core/: __init__.py  agent_registry.py  cache.py  config.py  economic_engine.py  economics.py  event_aggregator.py  models.py  schemas.py  signals.py
python/m_inc/examples/: 01_process_historical_trace.py  02_live_bff_simulation.py  03_analyze_outputs.py  04_custom_policy.py  05_visualize_outputs.py  README.md
python/m_inc/examples/output/historical/: events.csv  ticks.json
python/m_inc/m_inc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
python/m_inc/policies/: README.md  __init__.py  policy_dsl.py
python/m_inc/scripts/: __init__.py  analyze_traits.py  run_minc_on_bff.py  run_simulation.py  validate_determinism.py  validate_performance.py  validate_spec_compliance.py
python/m_inc/simulation_output/: agents_final.csv  events.csv  ticks.json
python/m_inc/test_output/: agents_final.csv  events.csv  ticks.json
python/m_inc/testdata/: TRACE_FORMAT.md  batch_trace_0.json  batch_trace_1.json  batch_trace_2.json  bff_trace_medium.json  bff_trace_small.json  create_sample_trace.py  generate_example_traces.py  trace_100tick.json  trace_10tick.json
python/m_inc/tests/: __init__.py  test_core_models.py  test_economic_engine.py  test_economics.py  test_property_based.py  test_signals.py  test_trace_reader.py
python/m_inc/utils/: __init__.py
(+25 files in other folders)
